razorpay success and failure page improved

--- a/src/main/resources/templates/index.qute.html
+++ b/src/main/resources/templates/index.qute.html
@@ -216,14 +216,20 @@
     <pre>{{ itemS }}</pre>
     -->
     <h5>Razor Payment Id : <code>{{ item.razorpay_payment_id }}</code></h5>
+    <h5>Razor Order Id : <code>{{ item.razorpay_order_id }}</code></h5>
+    <h5>Razor Signature : <code>{{ item.razorpay_signature }}</code></h5>
 </script>
 
 <script type="text/x-template" id="app-razorpay-failure-view">
     <br/>
-    <!--
-    <pre>{{ itemS }}</pre>
-    -->
+<!--    <pre>{{ itemS }}</pre>-->
     <h5>Error Code : <code>{{ item.error.code }}</code></h5>
+    <h5>Error Description : <code>{{ item.error.description }}</code></h5>
+    <h5>Error Source : <code>{{ item.error.source }}</code></h5>
+    <h5>Error Step : <code>{{ item.error.step }}</code></h5>
+    <h5>Error Reason : <code>{{ item.error.reason }}</code></h5>
+    <h5>Error Order Id : <code>{{ item.error.metadata.order_id }}</code></h5>
+    <h5>Error Payment Id : <code>{{ item.error.metadata.payment_id }}</code></h5>
 </script>
 
 <script type="text/x-template" id="app-root-view">
