--- a/src/main/resources/templates/index.qute.html
+++ b/src/main/resources/templates/index.qute.html
@@ -144,32 +144,32 @@
         <div class="col-md-4">
             <label for="itemBusinessName" class="form-label">Business Name</label>
             <input type="text" class="form-control" id="itemBusinessName"
-                   name="name" v-model="item.businessName" required readonly>
+                   name="name" v-model="item.businessName" required>
         </div>
         <div class="col-md-4">
             <label for="itemDescription" class="form-label">Description</label>
             <input type="text" class="form-control" id="itemDescription"
-                   name="description" v-model="item.description" required readonly>
+                   name="description" v-model="item.description" required>
         </div>
         <div class="col-md-4">
             <label for="itemPrefillName" class="form-label">Customer Name</label>
             <input type="text" class="form-control" id="itemPrefillName"
-                   name="prefill[name]" v-model="item.prefillName" required readonly>
+                   name="prefill[name]" v-model="item.prefillName" required>
         </div>
         <div class="col-md-4">
             <label for="itemPrefillContact" class="form-label">Customer Mobile</label>
             <input type="text" class="form-control" id="itemPrefillContact"
-                   name="prefill[contact]" v-model="item.prefillContact" required readonly>
+                   name="prefill[contact]" v-model="item.prefillContact" required>
         </div>
         <div class="col-md-4">
             <label for="itemPrefillEmail" class="form-label">Customer Email</label>
             <input type="text" class="form-control" id="itemPrefillEmail"
-                   name="prefill[email]" v-model="item.prefillEmail" required readonly>
+                   name="prefill[email]" v-model="item.prefillEmail" required>
         </div>
         <div class="col-md-4">
             <label for="itemPrefillAddress" class="form-label">Customer Address</label>
             <input type="text" class="form-control" id="itemPrefillAddress"
-                   name="notes[shipping address]" v-model="item.prefillAddress" required readonly>
+                   name="notes[shipping address]" v-model="item.prefillAddress" required>
         </div>
         <div class="col-md-4">
             <label for="itemImageUrl" class="form-label">Business Logo URL</label>
